core/b2b/core-services/ollama/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: ClusterIP
  ports:
  - port: 11434
    targetPort: 11434
    name: http
  selector:
    app: ollama
